[package]
name = "leader-metaserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
hyper = { version = "0.14.23", features = ["full"] }
mpl-token-metadata = { version = "1.6.5", features = ["serde", "no-entrypoint"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
tokio = { version = "1.24.1", features = ["tokio-macros", "full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
